--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "7c1cd78e-5cb7-4be9-9848-b3de164d8c05",
    "metadata": {},
    "outputs": [],
@@ -21,9 +21,9 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from lightgbm import LGBMClassifier\n",
-    "from catboost import CatBoostClassifier\n",
-    "from xgboost import XGBClassifier\n",
+    "# from lightgbm import LGBMClassifier\n",
+    "# from catboost import CatBoostClassifier\n",
+    "# from xgboost import XGBClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay, roc_auc_score, classification_report\n",
     "from sklearn.metrics import roc_curve, auc\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score \n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2b1b6e7a-4929-4e29-b63c-86ef00bf79bf",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "4     Rejected  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,6 +200,40 @@
    "source": [
     "data = pd.read_csv(r'../data/loan_approval_dataset.csv')\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "25e3208d-cd31-4b63-ae40-d283a3fcbe1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_id                                201\n",
+       " no_of_dependents                        4\n",
+       " education                    Not Graduate\n",
+       " self_employed                         Yes\n",
+       " income_annum                      9800000\n",
+       " loan_amount                      21200000\n",
+       " loan_term                              20\n",
+       " cibil_score                           355\n",
+       " residential_assets_value         22000000\n",
+       " commercial_assets_value           8900000\n",
+       " luxury_assets_value              31800000\n",
+       " bank_asset_value                 14400000\n",
+       " loan_status                      Rejected\n",
+       "Name: 200, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[200]"
    ]
   },
   {
@@ -238,6 +272,14 @@
    "source": [
     "data.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d453d55-6fec-4529-81b0-9f98129a3e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
